--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         OpenStreetMap</a> contributors, &copy;\
         <a href="https://carto.com/attribution">CARTO</a>'
   })
+  .addTo(map);
 
   /* Display college point markers with pop-up text */
   L.marker([41.74782033910632, -72.69055744640852]).addTo(map)
@@ -47,7 +48,7 @@
   L.marker([41.55678700370077, -72.65689337340099]).addTo(map)
   .bindPopup("Wesleyan University");
 
-  L.marker([41.55678700370077, -72.65689337340099]).addTo(map)
+  L.marker([41.379809106355054, -72.1045360211747]).addTo(map)
   .bindPopup("Connecticut College");
 
 
