--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <style>
   body { margin:0; padding:0; }
   #map { position: absolute; top:0; bottom:0; right:0; left:0; }
-  #map-title { position: relative; margin-top: 10px; margin-left: 50px; float: left; background: white; border: 8px solid rgba(16,32,75,0); padding: 6px 8px; font-family: Helvetica; font-weight: bold; font-size: 24px; z-index: 800; }
+  #map-title { position: relative; margin-top: 10px; margin-left: 50px; float: left; background: white; border: 8px solid rgba(16,32,100,0); padding: 6px 8px; font-family: Helvetica; font-weight: lighter;; font-size: 36px; z-index: 800; }
   </style>
 </head>
 <body>
